--- a/src/dockerfile
+++ b/src/dockerfile
@@ -1,5 +1,26 @@
+# Use the official OpenJDK image as a base image
 FROM openjdk:17-jdk-slim
+
+# Set the working directory inside the container
 WORKDIR /app
-COPY target/collegia-0.0.1-SNAPSHOT.jar app.jar
+
+# Copy the Maven build file
+COPY pom.xml ./
+
+# Download dependencies (this step is cached unless pom.xml changes)
+RUN apt-get update && apt-get install -y maven && mvn dependency:go-offline -B
+
+# Copy the source code into the container
+COPY src ./src
+
+# Build the application
+RUN mvn clean package -DskipTests
+
+# Copy the built JAR file into the container
+COPY target/*.jar app.jar
+
+# Expose the port your application runs on
 EXPOSE 8080
+
+# Command to run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
